--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Pagina 1</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
     <body>
@@ -17,8 +17,41 @@
           </ul>
         </nav>
         <h1>Pagina de inicio</h1>
-        <main>
-          
+        <main class="page1">
+            <article>
+                <article>
+                    <article></article>
+                </article>
+                <article>
+                    <article></article>
+                </article>
+                <article>
+                    <article></article>
+                </article>
+            </article>
+            <div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+            <aside>
+                <aside>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                </aside>
+                <aside>
+                    <aside></aside>
+                </aside>
+                <aside>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </aside>
+            </aside>
         </main>
     </body>
 </html>
