--- a/pages/page2.html
+++ b/pages/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Pagina 2</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
     <body>
@@ -10,15 +10,24 @@
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="" class="active">Pagina 2</a></li>
-            <li><a href="pages/page3.html">Pagina 3</a></li>
-            <li><a href="pages/page4.html">Pagina 4</a></li>
-            <li><a href="pages/page5.html">Pagina 5</a></li>
-            <li><a href="pages/page6.html">Pagina 6</a></li>
+            <li><a href="page3.html">Pagina 3</a></li>
+            <li><a href="page4.html">Pagina 4</a></li>
+            <li><a href="page5.html">Pagina 5</a></li>
+            <li><a href="page6.html">Pagina 6</a></li>
           </ul>
         </nav>
-        <h1>Pagina de inicio</h1>
-        <main>
-          
+        <h1>Pagina dos</h1>
+        <main class="page2">
+          <article>
+              <article>
+                <article></article>
+                <article></article>
+              </article>
+              <article>
+                <article></article>
+                <article></article>
+              </article>
+          </article>
         </main>
     </body>
 </html>
