--- a/pages/page5.html
+++ b/pages/page5.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Pagina 5</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
     <body>
         <nav>
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="pages/page2.html">Pagina 2</a></li>
-            <li><a href="pages/page3.html">Pagina 3</a></li>
-            <li><a href="pages/page4.html">Pagina 4</a></li>
+            <li><a href="page2.html">Pagina 2</a></li>
+            <li><a href="page3.html">Pagina 3</a></li>
+            <li><a href="page4.html">Pagina 4</a></li>
             <li><a href="" class="active">Pagina 5</a></li>
-            <li><a href="pages/page6.html">Pagina 6</a></li>
+            <li><a href="page6.html">Pagina 6</a></li>
           </ul>
         </nav>
-        <h1>Pagina de inicio</h1>
+        <h1>Pagina cinco</h1>
         <main>
           
         </main>
