--- a/pages/page2.html
+++ b/pages/page2.html
@@ -19,15 +19,48 @@
         <h1>Pagina dos</h1>
         <main class="page2">
           <article>
+            <article>
               <article>
-                <article></article>
-                <article></article>
+                <section></section>
+                <section></section>
               </article>
               <article>
-                <article></article>
-                <article></article>
+                <section></section>
+                <section></section>
               </article>
+            </article>
+            <article>
+              <article>
+                  <section></section>
+                  <section></section>
+              </article>
+              <article>
+                  <section></section>
+                  <section></section>
+              </article>
+            </article>
           </article>
+          <div>
+            <section></section>
+            <section></section>
+          </div>
+          <aside>
+            <aside>
+              <div></div>
+              <div></div>
+              <div></div>
+            </aside>
+            <nav>
+              <div>
+                <section></section>
+                <section></section>
+              </div>
+              <div>
+                <section></section>
+                <section></section>
+              </div>
+            </nav>
+          </aside>
         </main>
     </body>
 </html>
