--- a/pages/page2.html
+++ b/pages/page2.html
@@ -46,9 +46,15 @@
           </div>
           <aside>
             <aside>
-              <div></div>
-              <div></div>
-              <div></div>
+              <div>
+                <section></section>
+              </div>
+              <div>
+                <section></section>
+              </div>
+              <div>
+                <section></section>
+              </div>
             </aside>
             <nav>
               <div>
