--- a/pages/page3.html
+++ b/pages/page3.html
@@ -17,8 +17,70 @@
           </ul>
         </nav>
         <h1>Pagina tres</h1>
-        <main>
-          
-        </main>
+            <main class="page3">
+                <aside>
+                  <div>
+                      <nav>
+                          <article>
+                              <section></section>
+                              <section></section>
+                              <section></section>
+                          </article>
+                          <article>
+                              <section></section>
+                              <section></section>
+                              <section></section>
+                          </article>
+                      </nav>
+                  </div>
+                </aside>
+                <aside>
+                  <div>
+                      <nav>
+                          <div>
+                              <section></section>
+                              <section></section>
+                          </div>
+                          <div>
+                              <section></section>
+                              <section></section>
+                          </div>
+                          <nav>
+                              <section></section>
+                              <section></section>
+                          </nav>
+                      </nav>
+                  </div>
+                </aside>
+            <article>
+                <div>
+                  <aside>
+                      <section></section>
+                      <section></section>
+                  </aside>
+                  <article>
+                      <section></section>
+                      <section></section>
+                  </article>
+                  <div>
+                      <section></section>
+                      <section></section>
+                  </div>
+                </div>
+            </article>
+            <article>
+                <div>
+                  <footer>
+                      <nav>
+                          <section></section>
+                          <section></section>
+                          <section></section>
+                          <section></section>
+                          <section></section>
+                      </nav>
+                  </footer>
+                </div>
+            </article>
+          </main>
     </body>
 </html>
