--- a/pages/page5.html
+++ b/pages/page5.html
@@ -35,26 +35,35 @@
                   <article></article>
               </div>
               <article>
-                  <aside></aside>
-                  <aside></aside>
+                  <section></section>
+                  <section></section>
               </article>
               <nav>
-                  <article></article>
-                  <article></article>
+                  <section></section>
+                  <section></section>
                   <div></div>
                   <aside></aside>
               </nav>
           </article>
           <div>
             <nav>
-                <article></article>
-                <article></article>
+                <section></section>
+                <section></section>
                 <div></div>
                 <aside></aside>
             </nav>
-            <article></article>
-            <article></article>
-            <div></div>
+            <article>
+                <section></section>
+                <section></section>
+            </article>
+            <article>
+                <section></section>
+                <section></section>
+            </article>
+            <div>
+                <section></section>
+                <section></section>
+            </div>
             <aside>
                 <section></section>
             </aside>
