--- a/pages/page6.html
+++ b/pages/page6.html
@@ -17,8 +17,113 @@
           </ul>
         </nav>
         <h1>Pagina seis</h1>
-        <main>
-          
+        <main class="page6">
+            <article>
+                    <article>
+                        <footer>
+                            <section></section>
+                            <section></section>
+                        </footer>
+                        <aside>
+                            <div></div>
+                            <div></div>
+                            <div></div> 
+                        </aside>
+                    </article>
+                    <article>
+                        <footer>
+                            <section></section>
+                            <section></section>
+                        </footer>
+                        <aside>
+                            <div></div>
+                            <div></div>
+                            <div></div> 
+                        </aside>
+                    </article>
+                    <div>
+                        <article>
+                            <section></section>
+                        </article>
+                        <article>
+                            <section></section>
+                        </article>
+                        <article>
+                            <section></section>
+                        </article>
+                    </div>
+                    <nav>
+                        <article>
+                            <section></section>
+                            <section></section>
+                        </article>
+                    </nav>
+                    <nav>
+                        <aside>
+                            <section></section>
+                        </aside>
+                        <footer>
+                            <section></section>
+                            <section></section>
+                        </footer>
+                    </nav>
+                    <aside>
+                        <section></section>
+                    </aside>
+                    <nav>
+                        <section></section>
+                        <section></section>
+                        <div></div>
+                    </nav>
+            </article>
+            <aside>
+                <nav>
+                    <section></section>
+                    <nav>
+                        <div></div>
+                        <div></div>
+                        <div></div>    
+                    </nav>
+                </nav>
+                <nav>
+                    <section></section>
+                    <nav>
+                        <div></div>
+                        <div></div>
+                        <div></div>    
+                    </nav>
+                </nav>
+                <nav>
+                    <section></section>
+                    <nav>
+                        <div></div>
+                        <div></div>
+                        <div></div>    
+                    </nav>
+                </nav>
+                <nav>
+                    <section></section>
+                    <nav>
+                        <div></div>
+                        <div></div>
+                        <div></div>    
+                    </nav>
+                </nav>
+                <article>
+                    <nav>
+                        <section></section>
+                        <section></section>
+                        <section></section>
+                    </nav>
+                </article>
+                <article>
+                    <nav>
+                        <section></section>
+                        <section></section>
+                        <section></section>
+                    </nav>
+                </article>
+            </aside>
         </main>
     </body>
 </html>
